--- a/src/app/pages/patients/add/add.component.html
+++ b/src/app/pages/patients/add/add.component.html
@@ -276,10 +276,42 @@
                         </div>                      
                 </nb-tab>
                 <nb-tab tabTitle="Emergency Contact">
-                    Tab content 3
-                  </nb-tab>
-                  <nb-tab tabTitle="Devices">
-                    Tab content 4
+                    <!-- <form [formGroup]="profileForm" class="m-auto w-60"> -->
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="form-group mb-1">
+                                    <label for="contactName" class="label"> <span class="text-danger">*</span> 
+                                        Name</label>
+                                    <input type="text" fieldSize="medium" formControlName="emergencyName" nbInput fullWidth
+                                        id="contactName" placeholder="Name">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="form-group mb-1">
+                                    <label for="relation" class="label"> <span class="text-danger">*</span> 
+                                        Relation</label>
+                                    <div>
+                                        <nb-select size="medium" fullWidth id="relation" formControlName="emergencyRelation"
+                                             placeholder="Relation">
+                                            <nb-option *ngFor="let item of relation" [value]="item.id">{{item?.value}}
+                                            </nb-option>
+                                        </nb-select>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="form-group mb-1">
+                                    <label for="phoneNumber" class="label"> <span class="text-danger">*</span> 
+                                        Phone Number</label>
+                                    <input type="text" fieldSize="medium" formControlName="emergencyNumber" nbInput fullWidth
+                                        id="phoneNumber" placeholder="PhoneNumber">
+                                </div>
+                            </div>
+                        </div> 
                   </nb-tab>
                </nb-tabset>
             </form>
