--- a/src/app/pages/patients/add/add.component.html
+++ b/src/app/pages/patients/add/add.component.html
@@ -182,7 +182,7 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group mb-1">
-                                    <label for="policyHolder" class="label"> <span class="text-danger">*</span> 
+                                    <label for="policyHolder" class="label">
                                         Policy holder</label>
                                     <input type="text" fieldSize="medium" formControlName="policyHolder" nbInput fullWidth
                                         id="policyHolder" placeholder="Policy Holder">
@@ -190,7 +190,7 @@
                             </div>
                             <div class="col-md-6">
                                 <div class="form-group mb-1">
-                                    <label for="holderName" class="label"> <span class="text-danger">*</span>
+                                    <label for="holderName" class="label">
                                         Policy holder name
                                     </label>
                                     <div>
@@ -206,7 +206,7 @@
                         <div class="row">
                             <div class="col-md-6">
                                     <div class="form-group mb-1">
-                                        <div for="insuranceDob" class="label"> <span class="text-danger">*</span> 
+                                        <div for="insuranceDob" class="label"> 
                                             Date of Birth</div>
                                         <input nbInput fullWidth fieldSize="medium" formControlName="insuranceDob" placeholder="DD/MM/YYYY"
                                             [nbDatepicker]="formcontrol" fullWidth>
@@ -215,7 +215,7 @@
                             </div>
                             <div class="col-md-6">
                                 <div class="form-group mb-1">
-                                    <label for="claimAddress" class="label"> <span class="text-danger">*</span> 
+                                    <label for="claimAddress" class="label">
                                         Claim submission address</label>
                                     <input type="text" fieldSize="medium" formControlName="claimAddress" nbInput fullWidth
                                         id="claimAddress" placeholder="Claim submission address">
@@ -225,7 +225,7 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group mb-1">
-                                    <label for="insuranceCarrier" class="label"> <span class="text-danger">*</span> 
+                                    <label for="insuranceCarrier" class="label">
                                         Primary Insurance Carrier</label>
                                     <input type="text" fieldSize="medium" formControlName="insuranceCarrier" nbInput fullWidth
                                         id="insuranceCarrier" placeholder="Primary Insurance Carrier">
@@ -233,7 +233,7 @@
                             </div>
                             <div class="col-md-6">
                                 <div class="form-group mb-1">
-                                    <label for="medType" class="label"> <span class="text-danger">*</span>
+                                    <label for="medType" class="label">
                                         Type
                                     </label>
                                     <div>
@@ -249,7 +249,7 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group mb-1">
-                                    <label for="policyNumber" class="label"> <span class="text-danger">*</span> 
+                                    <label for="policyNumber" class="label">
                                         Subscriber ID / Policy Number</label>
                                     <input type="text" fieldSize="medium" formControlName="policyNumber" nbInput fullWidth
                                         id="policyNumber" placeholder="Subscriber ID / Policy Number">
@@ -257,7 +257,7 @@
                             </div>
                             <div class="col-md-6">
                                 <div class="form-group mb-1">
-                                    <label for="groupNumber" class="label"> <span class="text-danger">*</span> 
+                                    <label for="groupNumber" class="label">
                                         Group Number</label>
                                     <input type="text" fieldSize="medium" formControlName="groupNumber" nbInput fullWidth
                                         id="groupNumber" placeholder="Group Number">
@@ -267,7 +267,7 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group mb-1">
-                                    <label for="plan" class="label"> <span class="text-danger">*</span> 
+                                    <label for="plan" class="label">
                                        Plan</label>
                                     <input type="text" fieldSize="medium" formControlName="plan" nbInput fullWidth
                                         id="plan" placeholder="Plan">
@@ -306,7 +306,7 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <div class="form-group mb-1">
-                                    <label for="contactName" class="label"> <span class="text-danger">*</span> 
+                                    <label for="contactName" class="label">
                                         Name</label>
                                     <input type="text" fieldSize="medium" formControlName="emergencyName" nbInput fullWidth
                                         id="contactName" placeholder="Name">
@@ -316,7 +316,7 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <div class="form-group mb-1">
-                                    <label for="relation" class="label"> <span class="text-danger">*</span> 
+                                    <label for="relation" class="label">
                                         Relation</label>
                                     <div>
                                         <nb-select size="medium" fullWidth id="relation" formControlName="emergencyRelation"
@@ -331,7 +331,7 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <div class="form-group mb-1">
-                                    <label for="phoneNumber" class="label"> <span class="text-danger">*</span> 
+                                    <label for="phoneNumber" class="label">
                                         Phone Number</label>
                                     <input type="text" fieldSize="medium" formControlName="emergencyNumber" nbInput fullWidth
                                         id="phoneNumber" placeholder="PhoneNumber">
