feat: Added devices tabset

--- a/src/app/pages/patients/add/add.component.html
+++ b/src/app/pages/patients/add/add.component.html
@@ -339,6 +339,8 @@
                             </div>
                         </div> 
                   </nb-tab>
+                  <nb-tab tabTitle="Devices">
+                      </nb-tab>
                </nb-tabset>
             </form>
         </nb-card-body>
